# condensr

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  clippy.toml  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: Cargo.toml  Dockerfile  README.md
apps/api/.sqlx/: query-3b2ccfd176725397080f64bfe587263074632e1ecbe92573645ca93f6a2829ed.json  query-aa4c8d68e9f04dcb7618e7617f7a667f324c85fb930534b968cc9a65e97cc3f5.json  query-ad6d0c502cda0421f12ef578f6c1ef516c5dae0250c96a1cb39dfc14f0c7d869.json
apps/api/migrations/: 0001_create_links.sql  0002_dedup_long_url.sql
apps/api/src/: config.rs  lib.rs  main.rs
apps/api/src/database/: mod.rs  pg_database.rs
apps/api/src/models/: error.rs
apps/api/src/routes/: health.rs  links.rs  mod.rs  shorten.rs
apps/api/tests/api/: common.rs  errors.rs  health.rs  links.rs  main.rs  redirect.rs  shorten.rs
apps/desktop/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/.claude/skills/verify/: SKILL.md
apps/desktop/src/: App.css  App.module.scss  App.tsx  api.ts  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/api/: client.ts  links.ts  types.ts
apps/desktop/src/components/icons/: AlertCircleIcon.tsx  ArrowRightIcon.tsx  CheckCircleIcon.tsx  ChevronMark.tsx  CopyIcon.tsx  LinkGlyph.tsx  OpenIcon.tsx  index.ts
apps/desktop/src/features/redirect/: RedirectPage.module.scss  RedirectPage.tsx  useRedirectTarget.ts
apps/desktop/src/features/shortener/: AppHeader.module.scss  AppHeader.tsx  EmptyState.module.scss  EmptyState.tsx  ErrorBanner.module.scss  ErrorBanner.tsx  LinkRow.tsx  LinkTable.module.scss  LinkTable.tsx  ShortenForm.module.scss  ShortenForm.tsx  ShortenerPage.module.scss  ShortenerPage.tsx  useLinks.ts  (+2 more)
apps/desktop/src/lib/: errors.ts  platform.ts  time.ts  urls.ts
apps/desktop/src/styles/: _mixins.scss  _variables.scss  global.scss
crates/condensr-core/: Cargo.toml
crates/condensr-core/src/: lib.rs
