[package]
name = "condensr-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "condensr-api"
path = "src/main.rs"

[dependencies]
condensr-core = { path = "../../crates/condensr-core" }

tokio.workspace = true
axum.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
url.workspace = true

[dev-dependencies]
tower.workspace = true
http-body-util.workspace = true
