[package]
name = "condensr-desktop"
version = "0.1.0"
description = "Desktop client for the condensr URL shortener"
edition.workspace = true
license.workspace = true

[lib]
name = "condensr_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
